--- a/ImersaoDados_Aula_01.ipynb
+++ b/ImersaoDados_Aula_01.ipynb
@@ -6099,39 +6099,38 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "f4a50b74-32eb-4c91-8a8c-bf7f8485d704"
+        "outputId": "3c6f3821-8581-4ae6-fdba-4bfc34aa211e"
       },
       "source": [
         "##\tDesafio 06: Procurar na documentação o método query(pandas)\n",
-        "names = dados.columns.tolist()\n",
-        "filtered_df=dados.query(\"g0>1\")\n",
-        "filtered_df.shape\n",
-        "filtered_df[\"g0\"]\n"
+        "filtro=dados.query('g0>0')\n",
+        "filtro.shape\n",
+        "filtro['g0']\n"
       ],
-      "execution_count": 76,
+      "execution_count": 85,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0        1.062\n",
-              "6        2.044\n",
-              "16       8.738\n",
-              "39       1.631\n",
-              "48       2.520\n",
-              "         ...  \n",
-              "23749    3.288\n",
-              "23776    1.227\n",
-              "23791    5.312\n",
-              "23802    3.289\n",
-              "23805    1.738\n",
-              "Name: g0, Length: 3267, dtype: float64"
+              "0        1.0620\n",
+              "1        0.0743\n",
+              "2        0.6280\n",
+              "6        2.0440\n",
+              "7        0.2711\n",
+              "          ...  \n",
+              "23807    0.1420\n",
+              "23808    0.1608\n",
+              "23809    0.1394\n",
+              "23811    0.3942\n",
+              "23812    0.6660\n",
+              "Name: g0, Length: 11769, dtype: float64"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 76
+          "execution_count": 85
         }
       ]
     },
@@ -6159,25 +6158,23 @@
       "outputs": []
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "1rhR6jAYI3RT"
+        "id": "q0kx1e2It0iA"
       },
       "source": [
-        ""
-      ],
-      "execution_count": 78,
-      "outputs": []
+        "Ótima oportunidade da Alura propor essa imersão. Tenho estudado há algum tempo, mas faltava uma abordagem objetiva com um foco determinado e poder participar desse aprendizado junto com tanta gente me deixou muito feliz."
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "vE2h9MShDGCG"
+        "id": "8Kk64J7duL07"
       },
       "source": [
         ""
       ],
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": []
     }
   ]
